initial commits from last week

--- a/index.html
+++ b/index.html
@@ -1,1 +1,171 @@
-<h1>Hellp World</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Designftw Chatroom</title>
+    <script type="importmap">
+      {
+        "imports": {
+          "vue": "https://cdn.jsdelivr.net/npm/vue@3.5.13/dist/vue.esm-browser.js",
+          "@graffiti-garden/implementation-local": "https://cdn.jsdelivr.net/npm/@graffiti-garden/implementation-local@0.6.4/dist/browser/index.js",
+          "@graffiti-garden/implementation-remote": "https://cdn.jsdelivr.net/npm/@graffiti-garden/implementation-remote@0.6.2/dist/browser/index.js",
+          "@graffiti-garden/wrapper-vue": "https://cdn.jsdelivr.net/npm/@graffiti-garden/wrapper-vue@0.7.2/dist/browser/plugin.mjs"
+        }
+      }
+    </script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="app">
+      <h1>DesignFTW Chatroom</h1>
+
+      <button v-if="!$graffitiSession.value" @click="$graffiti.login()">
+        Log In
+      </button>
+      <template v-else>
+        <button @click="$graffiti.logout($graffitiSession.value)">
+          Log Out
+        </button>
+
+        <div v-if="!selectedChannel">
+          <form @submit.prevent="createGroupChat($graffitiSession.value)">
+            <fieldset :disabled="sending">
+              <input
+                type="text"
+                v-model="newGroupName"
+                placeholder="Enter Group Name"
+                ref="groupNameInput"
+                v-focus
+              />
+              <input
+                type="submit"
+                :value="sending ? 'Creating…' : 'New Group'"
+              />
+            </fieldset>
+          </form>
+
+          <h2>Group Chats</h2>
+          <graffiti-discover
+            v-slot="{ objects: groupChatObjects, isInitialPolling }"
+            :channels="['designftw']"
+            :schema="{
+              properties: {
+                value: {
+                  required: ['activity','object'],
+                  properties: {
+                    activity: { type:'string', enum:['Create'] },
+                    object: {
+                      type:'object',
+                      required:['type','name','channel'],
+                      properties: {
+                        type: { type:'string', enum:['Group Chat'] },
+                        name: { type:'string' },
+                        channel: { type:'string' }
+                      }
+                    }
+                  }
+                }
+              }
+            }"
+          >
+            <ul>
+              <li
+                v-for="ch in channels"
+                :key="ch"
+                v-if="!hiddenGroups.includes(ch)"
+              >
+                {{ channelNames[ch] || 'MyGroup' }}
+                <button @click="enterGroup(ch)">Enter</button>
+
+                <button @click="updateGroupName($graffitiSession.value, ch)">
+                  Rename
+                </button>
+              </li>
+            </ul>
+          </graffiti-discover>
+        </div>
+
+        <div v-else>
+          <button @click="selectedChannel = null"><em>Back</em></button>
+
+          <h2>Messages</h2>
+
+          <form @submit.prevent="sendMessage($graffitiSession.value)">
+            <fieldset :disabled="sendingMessage">
+              <input
+                type="text"
+                v-model="myMessage"
+                placeholder="Send a message"
+                ref="messageInput"
+                v-focus
+              />
+              <input
+                type="submit"
+                :value="sendingMessage ? 'Sending…' : 'Send'"
+              />
+            </fieldset>
+          </form>
+
+          <graffiti-discover
+            v-slot="{ objects: messageObjects, isInitialPolling }"
+            :channels="[selectedChannel]"
+            :schema="{
+              properties: {
+                value: {
+                  required: ['content','published'],
+                  properties: {
+                    content: { type:'string' },
+                    published: { type:'number' }
+                  }
+                }
+              }
+            }"
+          >
+            <ul>
+              <li v-if="isInitialPolling">Loading messages…</li>
+              <li
+                v-for="msg in messageObjects.sort((a,b) => a.value.published - b.value.published)"
+                :key="msg.url"
+              >
+                <strong>
+                  {{ msg.actor }}
+                  <span v-if="msg.actor === $graffitiSession.value.actor"
+                    >(you)</span
+                  > </strong
+                >: {{ msg.value.content }}
+                <template v-if="msg.actor === $graffitiSession.value.actor">
+                  <button @click="deleteMessage(msg, $graffitiSession.value)">
+                    Delete
+                  </button>
+                  <button @click="editMessage(msg, $graffitiSession.value)">
+                    Edit
+                  </button>
+                </template>
+              </li>
+            </ul>
+          </graffiti-discover>
+          <!-- Simple Group Member Section -->
+          <div>
+            <h3>Group Members</h3>
+            <ul>
+              <li
+                v-for="(id, index) in groupMembers[selectedChannel] || []"
+                :key="id"
+              >
+                {{ id }}
+                <button @click="removeMember(index)">Remove</button>
+              </li>
+            </ul>
+
+            <input v-model="newMemberId" placeholder="Actor ID to Add" />
+            <button @click="addMember">Add Member</button>
+            <button @click="leaveGroup(selectedChannel)">Leave Group</button>
+          </div>
+        </div>
+      </template>
+    </div>
+
+    <script src="index.js" type="module"></script>
+  </body>
+</html>
