--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Designftw Chatroom</title>
+    <title>DesignFTW Chatroom</title>
     <script type="importmap">
       {
         "imports": {
           "vue": "https://cdn.jsdelivr.net/npm/vue@3.5.13/dist/vue.esm-browser.js",
           "@graffiti-garden/implementation-local": "https://cdn.jsdelivr.net/npm/@graffiti-garden/implementation-local@0.6.4/dist/browser/index.js",
-          "@graffiti-garden/implementation-remote": "https://cdn.jsdelivr.net/npm/@graffiti-garden/implementation-remote@0.6.2/dist/browser/index.js",
           "@graffiti-garden/wrapper-vue": "https://cdn.jsdelivr.net/npm/@graffiti-garden/wrapper-vue@0.7.2/dist/browser/plugin.mjs"
         }
       }
@@ -17,155 +16,317 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="app">
-      <h1>DesignFTW Chatroom</h1>
+    <div id="app" v-if="isLoggedIn">
+      <div class="sidebar">
+        <!-- Header and Auth -->
+        <div class="header">
+          <img
+            src="images/ChatGPT_Image_Apr_30__2025__08_01_11_PM-removebg-preview.png"
+            alt="App Logo"
+            class="app-logo"
+          />
 
-      <button v-if="!$graffitiSession.value" @click="$graffiti.login()">
-        Log In
-      </button>
-      <template v-else>
-        <button @click="$graffiti.logout($graffitiSession.value)">
-          Log Out
-        </button>
+          <h1>Travel and Chatroom</h1>
+          <button
+            class="logic"
+            v-if="!$graffitiSession.value"
+            @click="$graffiti.login()"
+          >
+            Log In
+          </button>
+          <button
+            v-else
+            class="logic"
+            @click="$graffiti.logout($graffitiSession.value)"
+          >
+            Log Out
+          </button>
+        </div>
 
-        <div v-if="!selectedChannel">
-          <form @submit.prevent="createGroupChat($graffitiSession.value)">
-            <fieldset :disabled="sending">
-              <input
-                type="text"
-                v-model="newGroupName"
-                placeholder="Enter Group Name"
-                ref="groupNameInput"
-                v-focus
-              />
-              <input
-                type="submit"
-                :value="sending ? 'Creating…' : 'New Group'"
-              />
-            </fieldset>
-          </form>
+        <div>
+          <h2>My Profile</h2>
+          <button @click="startProfileEdit" class="logic">Edit Profile</button>
+          <div v-if="profile.icon" class="profile-display">
+            <img :src="profile.icon" class="profile-pic" alt="Profile Pic" />
+            <div class="profile-info">
+              <strong>{{ profile.name }}</strong><br />
+              <span>{{ profile.pronouns }}</span>
+            </div>
+          </div>
+          <div class="profile-bio" v-if="profile.bio">
+            <p><strong>Bio:</strong> {{ profile.bio }}</p>
+          </div>
+        </div>
 
+        <!-- Profile Edit Panel -->
+        <div v-if="showProfileEditor" class="profile-panel">
+          <label>Name:</label>
+          <input v-model="profile.name" type="text" placeholder="e.g., Alex" />
+          <label>Pronouns:</label>
+          <input
+            v-model="profile.pronouns"
+            type="text"
+            placeholder="e.g., they/them"
+          />
+          <label>Bio:</label>
+          <textarea v-model="profile.bio"></textarea>
+          <label>Profile Pic URL:</label>
+          <input v-model="profile.icon" type="text" />
+          <button
+            class="logic"
+            @click="showProfileEditor = false"
+            style="background-color: red; color: white"
+          >
+            Cancel
+          </button>
+
+          <button class="logic" @click="showProfileEditor = false">Save</button>
+        </div>
+
+        <!-- Group Chat Section -->
+        <div class="header">
           <h2>Group Chats</h2>
-          <graffiti-discover
-            v-slot="{ objects: groupChatObjects, isInitialPolling }"
-            :channels="['designftw']"
-            :schema="{
-              properties: {
-                value: {
-                  required: ['activity','object'],
-                  properties: {
-                    activity: { type:'string', enum:['Create'] },
-                    object: {
-                      type:'object',
-                      required:['type','name','channel'],
-                      properties: {
-                        type: { type:'string', enum:['Group Chat'] },
-                        name: { type:'string' },
-                        channel: { type:'string' }
-                      }
+          <div class="create-group-wrapper">
+            <button id="toggleGroupMenu" class="plus-button">+</button>
+            <div id="groupMenu" class="dropdown hidden">
+              <button id="showCreateForm">Create Group</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- Group Creation Form -->
+        <form
+          @submit.prevent="createGroup($graffitiSession.value)"
+          class="hidden"
+          id="createGroupForm"
+        >
+          <input
+            class="newGroupChat"
+            type="text"
+            v-model="groupName"
+            placeholder="Group Chat Name"
+            required
+          />
+          <button class="logic" type="submit">Create Group</button>
+        </form>
+
+        <graffiti-discover
+          v-slot="{ objects: groupChatObjects }"
+          :channels="['designftw']"
+          :schema="{
+            properties: {
+              value: {
+                required: ['activity', 'object'],
+                properties: {
+                  activity: { const: 'Create' },
+                  object: {
+                    required: ['type', 'name', 'channel'],
+                    properties: {
+                      type: { const: 'Group Chat' },
+                      name: { type: 'string' },
+                      channel: { type: 'string' }
                     }
                   }
                 }
               }
-            }"
-          >
-            <ul>
-              <li
-                v-for="ch in channels"
-                :key="ch"
-                v-if="!hiddenGroups.includes(ch)"
-              >
-                {{ channelNames[ch] || 'MyGroup' }}
-                <button @click="enterGroup(ch)">Enter</button>
+            }
+          }"
+        >
+          <ul class="group-chat-list">
+            <li
+              v-for="group in groupChatObjects"
+              :key="group.url"
+              class="group-chat-item"
+              @click="selectedChannel = group.value.object.channel"
+            >
+              <button class="groupchatbutton">
+                <img src="images/tokyo.png" alt="Group Pic" class="avatar" />
+                <div class="text-content">
+                  <strong
+                    >{{ getGroupName(group.value.object.channel) ||
+                    group.value.object.name }}</strong
+                  >
+                </div>
+              </button>
+            </li>
+          </ul>
+        </graffiti-discover>
+      </div>
 
-                <button @click="updateGroupName($graffitiSession.value, ch)">
-                  Rename
+      <!-- Chat Area -->
+      <div class="chat-area">
+        <template v-if="selectedChannel">
+          <!-- Chat Header -->
+          <div class="titleGroup" @click="showGroupInfo = true">
+            <img src="./groupavatar.png" class="avatar" alt="Group Pic" />
+            <h2>{{ getGroupName(selectedChannel) }}</h2>
+            <span class="info-icon">ℹ️</span>
+          </div>
+
+          <!-- Group Info Panel -->
+          <div class="group-info-panel" v-if="showGroupInfo">
+            <button @click="showGroupInfo = false" class="plus-button">
+              ←
+            </button>
+            <div class="group-info-content">
+              <div class="group-settings">
+                <h2>Group Settings</h2>
+                <label>Rename Group:</label>
+                <div class="renaming">
+                  <input v-model="groupName" type="text" />
+                  <button @click="renameGroup" class="rename-btn">
+                    Rename Group
+                  </button>
+                </div>
+                <label>Description:</label>
+                <textarea v-model="groupDescription"></textarea>
+                <button @click="deleteGroup" class="delete-group-btn">
+                  Delete Group
                 </button>
-              </li>
-            </ul>
-          </graffiti-discover>
-        </div>
+              </div>
+              <div class="group-members">
+                <h2>Members</h2>
+                <div class="membersContainer">
+                  <ul>
+                    <li v-for="member in groupMembers" :key="member">
+                      {{ member }}
+                    </li>
+                  </ul>
+                  <button class="add-member-btn">+ Add Member</button>
+                </div>
+              </div>
+            </div>
+          </div>
 
-        <div v-else>
-          <button @click="selectedChannel = null"><em>Back</em></button>
+          <!-- Chat Messages Panel -->
+          <div v-if="!showGroupInfo" class="chat-messages-panel">
+            <graffiti-discover
+              v-slot="{ objects: messageObjects }"
+              :channels="[selectedChannel]"
+              :schema="{
+                properties: {
+                  value: {
+                    required: ['content', 'published'],
+                    properties: {
+                      content: { type: 'string' },
+                      published: { type: 'number' }
+                    }
+                  }
+                }
+              }"
+            >
+              <ul>
+                <li
+                  v-for="object in messageObjects"
+                  :key="object.url"
+                  class="chat-message"
+                >
+                  <!-- My message -->
+                  <div
+                    class="miMensaje"
+                    v-if="object.actor === $graffitiSession.value.actor"
+                  >
+                    <div class="message-header">
+                      <span class="authorMe">{{ object.actor }} (you)</span>
+                    </div>
+                    <div v-if="editingMessage === object">
+                      <input v-model="editContent" class="editText" />
+                      <button @click="saveEdit(object)">Save</button>
+                      <button @click="cancelEdit">Cancel</button>
+                    </div>
+                    <div v-else class="message-bubble">
+                      {{ object.value.content }}
+                      <reaction-button :message-url="object.url" />
+                      <div class="message-menu">
+                        <button
+                          class="menu-toggle"
+                          @click="toggleMessageMenu(object)"
+                        >
+                          ⋮
+                        </button>
+                        <div v-if="activeMenu === object" class="dropdown">
+                          <button @click="startEdit(object)">Edit</button>
+                          <button @click="deleteMessage(object)">Delete</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
 
-          <h2>Messages</h2>
+                  <!-- Other's message -->
+                  <div class="otroMensaje" v-else>
+                    <div class="message-header">
+                      <span class="author">{{ object.actor }}</span>
+                    </div>
+                    <div class="message-bubble">
+                      {{ object.value.content }}
+                      <reaction-button :message-url="object.url" />
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </graffiti-discover>
 
-          <form @submit.prevent="sendMessage($graffitiSession.value)">
-            <fieldset :disabled="sendingMessage">
-              <input
-                type="text"
-                v-model="myMessage"
-                placeholder="Send a message"
-                ref="messageInput"
-                v-focus
-              />
-              <input
-                type="submit"
-                :value="sendingMessage ? 'Sending…' : 'Send'"
-              />
-            </fieldset>
-          </form>
+            <!-- Input Form -->
+            <form @submit.prevent="sendMessage($graffitiSession.value)">
+              <fieldset :disabled="sending">
+                <input
+                  type="text"
+                  v-model="myMessage"
+                  placeholder="Message"
+                  ref="messageInput"
+                />
+                <input type="submit" :value="sending ? '...' : '➤'" />
+              </fieldset>
+            </form>
+          </div>
 
+          <!-- Background sync -->
           <graffiti-discover
-            v-slot="{ objects: messageObjects, isInitialPolling }"
-            :channels="[selectedChannel]"
+            ref="groupNameDiscover"
+            v-slot="{ objects }"
+            :channels="['designftw']"
             :schema="{
               properties: {
                 value: {
-                  required: ['content','published'],
+                  required: ['name', 'describes'],
                   properties: {
-                    content: { type:'string' },
-                    published: { type:'number' }
+                    name: { type: 'string' },
+                    describes: { type: 'string' }
                   }
                 }
               }
             }"
           >
-            <ul>
-              <li v-if="isInitialPolling">Loading messages…</li>
-              <li
-                v-for="msg in messageObjects.sort((a,b) => a.value.published - b.value.published)"
-                :key="msg.url"
-              >
-                <strong>
-                  {{ msg.actor }}
-                  <span v-if="msg.actor === $graffitiSession.value.actor"
-                    >(you)</span
-                  > </strong
-                >: {{ msg.value.content }}
-                <template v-if="msg.actor === $graffitiSession.value.actor">
-                  <button @click="deleteMessage(msg, $graffitiSession.value)">
-                    Delete
-                  </button>
-                  <button @click="editMessage(msg, $graffitiSession.value)">
-                    Edit
-                  </button>
-                </template>
-              </li>
-            </ul>
+            <div style="display: none">
+              {{ updateGroupNameObjects(objects) }}
+            </div>
           </graffiti-discover>
-          <!-- Simple Group Member Section -->
-          <div>
-            <h3>Group Members</h3>
-            <ul>
-              <li
-                v-for="(id, index) in groupMembers[selectedChannel] || []"
-                :key="id"
-              >
-                {{ id }}
-                <button @click="removeMember(index)">Remove</button>
-              </li>
-            </ul>
 
-            <input v-model="newMemberId" placeholder="Actor ID to Add" />
-            <button @click="addMember">Add Member</button>
-            <button @click="leaveGroup(selectedChannel)">Leave Group</button>
-          </div>
-        </div>
-      </template>
+          <graffiti-discover
+            ref="profileDiscover"
+            v-slot="{ objects }"
+            :channels="[$graffitiSession?.value?.actor || '']"
+            :schema="{
+              properties: {
+                value: {
+                  required: ['describes'],
+                  properties: {
+                    name: { type: 'string' },
+                    pronouns: { type: 'string' },
+                    bio: { type: 'string' },
+                    icon: { type: 'string' },
+                    describes: { type: 'string' }
+                  }
+                }
+              }
+            }"
+          >
+            <div style="display: none">{{ updateProfileObjects(objects) }}</div>
+          </graffiti-discover>
+        </template>
+      </div>
     </div>
 
-    <script src="index.js" type="module"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
