--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         "imports": {
           "vue": "https://cdn.jsdelivr.net/npm/vue@3.5.13/dist/vue.esm-browser.js",
           "@graffiti-garden/implementation-local": "https://cdn.jsdelivr.net/npm/@graffiti-garden/implementation-local@0.6.4/dist/browser/index.js",
+          "@graffiti-garden/implementation-remote": "https://cdn.jsdelivr.net/npm/@graffiti-garden/implementation-remote@0.6.2/dist/browser/index.js",
           "@graffiti-garden/wrapper-vue": "https://cdn.jsdelivr.net/npm/@graffiti-garden/wrapper-vue@0.7.2/dist/browser/plugin.mjs"
-        }
+      }
       }
     </script>
     <link rel="stylesheet" href="style.css" />
@@ -18,7 +19,6 @@
   <body>
     <div id="app" v-if="isLoggedIn">
       <div class="sidebar">
-        <!-- Header and Auth -->
         <div class="header">
           <img
             src="images/ChatGPT_Image_Apr_30__2025__08_01_11_PM-removebg-preview.png"
