--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="app" v-if="isLoggedIn">
+    <div id="app">
       <div class="sidebar">
         <div class="header">
           <img
@@ -27,20 +27,14 @@
           />
 
           <h1>Travel and Chatroom</h1>
-          <button
+          <!--<button
             class="logic"
             v-if="!$graffitiSession.value"
             @click="$graffiti.login()"
           >
             Log In
-          </button>
-          <button
-            v-else
-            class="logic"
-            @click="$graffiti.logout($graffitiSession.value)"
-          >
-            Log Out
-          </button>
+          </button>-->
+          <button class="logic" @click="handleLogout">Log Out</button>
         </div>
 
         <div>
@@ -159,7 +153,6 @@
           <div class="titleGroup" @click="showGroupInfo = true">
             <img src="./groupavatar.png" class="avatar" alt="Group Pic" />
             <h2>{{ getGroupName(selectedChannel) }}</h2>
-            <span class="info-icon">ℹ️</span>
           </div>
 
           <!-- Group Info Panel -->
