--- a/intermediate.html
+++ b/intermediate.html
@@ -28,13 +28,11 @@
     <div class="menu-card">
       <h2>Start Exploring</h2>
       <div class="menu-list">
-        <!-- keep this first button wired up -->
         <button class="menu-item" @click="openChats">
           <span class="icon">💬</span>
           <span class="label">Open Chats</span>
         </button>
-        <!-- these are placeholders -->
-        <button class="menu-item">
+        <button class="menu-item"  @click="openMap">
           <span class="icon">🗺️</span>
           <span class="label">Open Maps</span>
         </button>
