lots of new features

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Login | DesignFTW Chat</title>
+    <title>Login | Travel and Chat</title>
 
-    <!-- your stylesheet -->
     <link rel="stylesheet" href="style.css" />
 
-    <!-- importmap now includes implementation-local -->
     <script type="importmap">
       {
         "imports": {
